force-app/main/default/objects/Stock_Reservation__c/Stock_Reservation__c.object-meta.xml
<CustomObject>
    <label>Stock Reservation</label>
    <pluralLabel>Stock Reservations</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Reservation Number</label>
        <displayFormat>SR-{000000}</displayFormat>
    </nameField>
    <sharingModel>Private</sharingModel>
    <description>Temporary, Salesforce-side stock reservation for an OrderItem, with timeout. One per OrderItem. Lookup (not MD) so it survives OrderItem deletion for audit. OWD Private. See ADR-0006.</description>
</CustomObject>