force-app/main/default/objects/Stock_Reservation__c/fields/Expiry_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Timestamp__c</fullName>
    <label>Expiry Timestamp</label>
    <type>DateTime</type>
    <description>When the reservation expires. Drives the Time-Triggered Path that flips Active to Expired. See ADR-0006.</description>
</CustomField>