force-app/main/default/objects/Stock_Reservation__c/fields/OrderItem__c.field-meta.xml
<CustomField>
    <fullName>OrderItem__c</fullName>
    <label>Order Item</label>
    <type>Lookup</type>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Stock Reservations</relationshipLabel>
    <relationshipName>Stock_Reservations</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The order line this reservation backs. Lookup with SetNull (not Master-Detail) so the reservation audit row survives OrderItem deletion. Orphans handled by a Record-Triggered Flow. See ADR-0006.</description>
</CustomField>