force-app/main/default/objects/Stock_Reservation__c/fields/Product2__c.field-meta.xml
<CustomField>
    <fullName>Product2__c</fullName>
    <label>Product</label>
    <type>Lookup</type>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Stock Reservations</relationshipLabel>
    <relationshipName>Stock_Reservations</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The product whose stock is reserved. Not required + SetNull (Product2 cannot parent a cascade/restrict lookup; required lookups demand cascade/restrict). Population enforced by app logic. See ADR-0006 / materialization finding.</description>
</CustomField>