force-app/main/default/objects/Stock_Reservation__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <label>Quantity</label>
    <type>Number</type>
    <precision>12</precision>
    <scale>0</scale>
    <required>true</required>
    <description>Units reserved. See ADR-0006.</description>
</CustomField>