force-app/main/default/objects/Stock_Reservation__c/fields/Released_By__c.field-meta.xml
<CustomField>
    <fullName>Released_By__c</fullName>
    <label>Released By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Released Stock Reservations</relationshipLabel>
    <relationshipName>Released_Stock_Reservations</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who manually released the reservation (if applicable). See ADR-0006.</description>
</CustomField>