force-app/main/default/objects/Stock_Reservation__c/fields/Released_Reason__c.field-meta.xml
<CustomField>
    <fullName>Released_Reason__c</fullName>
    <label>Released Reason</label>
    <type>Text</type>
    <length>255</length>
    <description>Why the reservation was released. See ADR-0006.</description>
</CustomField>