force-app/main/default/objects/Stock_Reservation__c/fields/Reservation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Reason__c</fullName>
    <label>Reservation Reason</label>
    <type>Text</type>
    <length>255</length>
    <description>Why the reservation was created. See ADR-0006.</description>
</CustomField>