force-app/main/default/objects/Stock_Reservation__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <description>Reservation lifecycle: Active then a terminal state. See ADR-0006.</description>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Active</fullName><default>true</default><label>Active</label></value>
            <value><fullName>Consumed</fullName><default>false</default><label>Consumed</label></value>
            <value><fullName>Released</fullName><default>false</default><label>Released</label></value>
            <value><fullName>Expired</fullName><default>false</default><label>Expired</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>